
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.36.5]]
== 0.36.5 (TBD)

icon:plus[] Upload: The `upload.parser` config setting and `MESH_BINARY_DOCUMENT_PARSER` environment variable can be used to control whether uploads should be parsed to extract metadata and contents. Uploads will be parsed by default.

icon:plus[] Search: The `search.includeBinaryFields` config setting and `MESH_ELASTICSEARCH_INCLUDE_BINARY_FIELDS` environment variable can be used to control whether binary field metadata and plain text content should be added to the search index. By default metadata and content will be added to the search index.

icon:plus[] REST: A core library for JSON support (jackson) has been updated.

[[v0.36.4]]
== 0.36.4 (05.07.2019)

icon:check[] GraphQL: Fixed a bug that caused an error when filtering a node from a schema context that has no content in the default language.

icon:plus[] Graph: The `storage.synchronizeWrites` config setting and `MESH_GRAPH_SYNC_WRITES` environment variable can be used to control whether write operations should be executed synchronously. By default write operations are handled asynchronously.

[[v0.36.3]]
== 0.36.3 (04.07.2019)

icon:plus[] Search: Two new options have been added to the mesh search configuration. When the encoded request length exceeds the new `bulkLengthLimit`, no new documents will be added to the bulk and the bulk will be sent to Elasticsearch. The new `retryLimit` causes Gentics Mesh to drop a request to Elasticsearch after the configured limit has been reached. link:https://github.com/gentics/mesh/issues/784[#784]

icon:check[] Search: Backpressure for handling index requests has been improved. This reduces memory usage when indexing large amounts of data in a short period of time. link:https://github.com/gentics/mesh/issues/785[#785]
