@@ -1,9 +1,9 @@
 package com.gentics.mesh.core.rest.common;
 
+import java.util.Objects;
+
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonPropertyDescription;
-
-import java.util.Objects;
 
 /**
  * Abstract response which provides the uuid.
@@ -31,10 +31,14 @@ public abstract class AbstractResponse implements RestResponse {
 
 	@Override
 	public boolean equals(Object o) {
-		if (this == o) return true;
-		if (o == null || getClass() != o.getClass()) return false;
-		AbstractResponse that = (AbstractResponse) o;
-		return Objects.equals(getUuid(), that.getUuid());
+		if (this == o) {
+			return true;
+		}
+		if (o instanceof AbstractResponse) {
+			AbstractResponse that = (AbstractResponse) o;
+			return Objects.equals(getUuid(), that.getUuid());
+		}
+		return super.equals(o);
 	}
 
 	@Override
